--- a/.harness/testing_codebase.yaml
+++ b/.harness/testing_codebase.yaml
@@ -11,6 +11,12 @@ pipeline:
         description: ""
         type: Custom
         spec:
+          platform:
+            os: Linux
+            arch: Amd64
+          runtime:
+            type: Cloud
+            spec: {}
           execution:
             steps:
               - step:
